# canvas-toolbox

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  DATACOVE-SYNC_HANDOFF_cloudflare-sister-repo.md  LICENSE  NGAI_HANDOFF_canvas-toolbox-features.md  README.md  SECURITY.md  UPDATE.md  grading_readme.md  llms.txt  pyproject.toml
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/commands/: quality-check.md
.devcontainer/: README.md  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml  share.yml
.github/workflows/: agent-submitted-label.yml  ci.yml  regression.yml  version-bump.yml
docs/: ROADMAP.md  UPGRADING.md  ai-engagement-classifier-design.md  canvas-access-boundary.md  course_design_workflow.md  grading-enforcement-a3.md  grading-readme.md  grading_readme.md  offline_mode.md  offline_mode_sprints.md  offline_readme.md  split-agent-access.md  voting-system-deployment-checklist.md
docs/implementation/: sync_to_new.md
docs/proposals/: audit-artifact-progress-tracking.md  audit-aware-redesign.md  make-ai-agents-yaml-migration-analysis.md  phase1-engagement-audit-rust-plan.md  rust-auto-install-plan.md  rust-high-priority-roadmap.md  rust-migration-3-phase-strategy.md  rust-value-proposition-analysis.md  v1.6-cb-init-refactor-plan.md  yaml-frontmatter-migration-plan.md
docs/research/: accommodation-recalc-findings.md  odysseus-2026-07-09.md  submit-on-behalf-findings.md
infra/bug-intake-worker/: .gitignore  README.md  wrangler.toml
infra/bug-intake-worker/src/: worker.ts
infra/voting-worker/: README.md  schema.sql  wrangler.toml
infra/voting-worker/src/: worker.ts
knowledge/: behavioral_discipline.md  naming-conventions.md  source_docs_index.md  trunk-based-development.md
lib/agents/: AGENT_LAYERS.md  canvas-sync.md  canvas_blueprint_sync.json  canvas_blueprint_sync.md  canvas_content_sync.json  canvas_content_sync.md  canvas_course_expert.json  canvas_course_expert.md  canvas_grader.json  canvas_grader.md  canvas_new_course_setup.md  canvas_schedule_auditor.json  canvas_schedule_auditor.md  canvas_semester_setup.json  canvas_semester_setup.md  ira_program_alignment.json  ira_program_alignment.md
lib/agents/knowledge/: README.md  assessments_knowledge.json  assessments_knowledge.md  backwards_design_knowledge.json  backwards_design_knowledge.md  canvas_api_knowledge.json  canvas_api_knowledge.md  canvas_api_lessons_learned.json  canvas_api_lessons_learned.md  cognitive_load_theory_knowledge.json  cognitive_load_theory_knowledge.md  content_representation_knowledge.json  content_representation_knowledge.md  course_design_language_knowledge.json  (+47 more)
lib/marketing/: README-LEGACY-2026-06-26.md
lib/tests/: conftest.py  test_agents_active_context.py  test_ai_engagement_classifier.py  test_apply_sas_accommodations_helpers.py  test_block_canvas_hook.py  test_blueprint_orphan_pages_plan.py  test_build_deid_master_helpers.py  test_canvas_mode.py  test_canvas_quiz_questions.py  test_canvas_run.py  test_canvas_sync_late_policy_push.py  test_canvas_sync_metadata_sidecars.py  test_canvas_sync_status_course_level.py  test_cb_init.py  test_clean_sandbox.py  test_clo_catalog_import.py  test_clo_quality_audit.py  test_content_fetch.py  test_course_audit_artifact.py  test_course_engagement_audit_helpers.py  test_course_homepage_build.py  test_course_loader.py  test_course_loader_order.py  test_course_map_week_order.py  test_csv_utils.py  test_file_finder.py  test_formative_variety_local.py  test_grade_guardian.py  test_grader_audit_workflow.py  test_grader_competency_grade.py  test_grader_consensus_conflict.py  test_grader_consensus_helpers.py  test_grader_deidentify_comments.py  test_grader_fetch_helpers.py  test_grader_fetch_nq_responses.py  test_grader_filename_parsing.py  test_grader_grade_signals.py  test_grader_gradebook_apply.py  test_grader_gradebook_deid.py  test_grader_lowband_audit.py  (+30 more)
lib/tools/: README.md  __toolbox_version__.py  _canvas_mode.py  _challenge_dir_guard.py  _course_engagement_audit_python.py  _course_loader.py  _csv_utils.py  _env_loader.py  _file_finder.py  _fix_group_override_recalc_python.py  _imscc.py  _link_metadata.py  _md_to_pdf.py  _migrate_agent_to_yaml.py  _orphan_phase2.py  _override_recalc_helper.py  _quiz_kind.py  accessibility_audit.py  ai_engagement_classifier.py  apply_sas_accommodations.py  bloom_verbs.py  blueprint_exception_report.py  blueprint_orphan_pages.py  blueprint_presync_check.py  blueprint_sync.py  build_deid_master.py  canvas_api_tool.py  canvas_course_guard.py  canvas_pages.py  canvas_quiz_questions.py  canvas_run.py  canvas_sync.py  cb_init.py  cb_report_bug.py  clean_sandbox.py  clo_catalog_import.py  clo_quality_audit.py  content_fetch.py  content_representation_audit.py  course_alignment_audit.py  (+76 more)
lib/tools/fix_override_recalc_rs/: Cargo.toml  README.md
lib/tools/fix_override_recalc_rs/src/: main.rs
scaffold/: .env.example  env.canvas.example  migrate_to_clone_layout.py  migrate_v15_to_v16.py
scaffold/claude/: settings.json
scaffold/grading/: .gitignore
scripts/: install.ps1  install.sh
(+33 files in other folders)
