[project]
name = "canvas-toolbox"
version = "0.34.1"
description = "Canvas LMS course-design audits + safe sync paths + AoL course-map generation. Read-only audits cover rubric coverage/quality, syllabus completeness (BYU-I 25-item rubric), CLO quality, content representation, and workload distribution. Sync paths cover master→Blueprint, Page-level orphan cleanup, and per-resource pulls. Agent-facing knowledge surfaces in `lib/agents/`."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.93.0",
    "beautifulsoup4>=4.14.3",
    "canvasapi>=3.5.0",
    "lxml>=6.0.3",
    "markdown>=3.10.2",
    "markdownify>=1.2.2",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.4",
    "python-dotenv>=1.2.2",
    "python-docx>=1.1.2",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
testpaths = ["lib/tests"]
