[package]
name = "fix-override-recalc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fix-override-recalc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
